...
      width: 110,
      color: kSplashBackgroundColor,
      padding: const EdgeInsets.symmetric(vertical: 24.0),
      child: Column(
        children: [
          const Text(
            "Eat.o",
            style: TextStyle(
              fontSize: 32,
              fontWeight: FontWeight.bold,
              color: kPrimaryColor,
            ),
          ),
...
          _buildNavRailItem(Icons.table_restaurant, "Meja", 3),
          const Spacer(),
          // Logout Icon sudah menggunakan kPrimaryColor
          IconButton(
            icon: const Icon(Icons.logout, color: kPrimaryColor, size: 30),
            onPressed: onLogout,
            tooltip: 'Logout',
          ),
        ],
      ),
    );
  }

...
